# DreamBerdc

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  ast.rs  codegen.rs  compile_error.rs  lexer.rs  macros.rs  main.rs  parser.rs  symboltable.rs  types.rs  utils.rs
src/codegen/: codegen_class.rs  codegen_control_flow.rs  codegen_expression.rs  codegen_function.rs  codegen_statement.rs  debug_info.rs  expression.rs  mod.rs  statement.rs
src/lexer/: mod.rs
src/parser/: mod.rs  parser_class.rs  parser_function.rs  parser_ops.rs
src/test/: mod.rs  parser_test.rs  run_test.rs  tokenizer_test.rs
src/traits/: add.rs  mod.rs
std/: list.db  prelude.db
test/: file.drmbrd  for_loop.drmbrd  if_test.drmbrd  override.drmbrd
test/parsed/: add.parsed  array.parsed  class.parsed
test/source/: add.db  array.db  assignment.db  class.db  dereference.db  file.db  for_loop.db  getchar.db  if_test.db  override.db  print.db  types.db
test_files/: add.db  add.drmbrd  array.db  dereference.db  file.db  file.drmbrd  for_loop.db  for_loop.drmbrd  if_test.drmbrd  override.db  override.drmbrd  types.db  types.drmbrd
test_files_play/: add.db  file.db  getchar.drmbrd  override.db  print.db
