[package]
name = "dreamberdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
itertools = "0.11.0"
clap = { version = "4.4.3", features = ["derive"] }
thiserror = "1.0.48"
pretty_assertions = "1.4.0"
colored = "2.0.4"

[dev-dependencies]
serde = {version = "1.0.197", features = ["derive"]}
bitflags = {version = "2.3.3", features = ["serde"]}
